# ckanDemo

./: api_ckan.json  backup_ckan_2_10_PHUC
ckan/lib/: uploader.py
ckan/public/base/scss/: _variables.scss
ckan/views/: api.py
ckanext/ckanext-api/: MANIFEST.in  README.md  setup.cfg
ckanext/ckanext-api/.github/workflows/: test.yml
ckanext/ckanext-api/ckanext/api/: cli.py  config_declaration.yaml  helpers.py  plugin.py  views.py
ckanext/ckanext-api/ckanext/api/assets/: script.js  webassets.yml
ckanext/ckanext-api/ckanext/api/logic/: action.py  auth.py  schema.py  (+1 more)
ckanext/ckanext-minio/: MANIFEST.in  README.md  setup.cfg  setup.py
ckanext/ckanext-minio/.github/workflows/: test.yml
ckanext/ckanext-minio/ckanext/minio/: cli.py  helpers.py  plugin.py  views.py
ckanext/ckanext-new_template/: MANIFEST.in  README.md  setup.cfg  setup.py
ckanext/ckanext-new_template/.github/workflows/: test.yml
ckanext/ckanext-new_template/ckanext/new_template/: cli.py  helpers.py  plugin.py  views.py
ckanext/ckanext-new_template/ckanext/new_template/assets/: script.js  webassets.yml
ckanext/ckanext-new_template/ckanext/new_template/assets/css/: new_temp.css
ckanext/ckanext-new_template/ckanext/new_template/logic/: action.py  auth.py  schema.py  validators.py
ckanext/ckanext-new_template/ckanext/new_template/templates/home/: index.html
ckanext/ckanext-new_template/ckanext/new_template/templates/snippets/: example_theme_most_popular_groups.html  promoted.html  search.html
ckanext/ckanext-new_template/ckanext/new_template/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/ckanext-new_template/ckanext/new_template/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext/demo_api_login/: plugin.py
ckanext/group_login_features/: plugin.py
ckanext/tracking/: plugin.py
(+25 files in other folders)
